--- a/app/contactus.html
+++ b/app/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<body style="background-color:#9D3C72;">
+<body style="background-color:#3c3238;">
     <div style="text-align: center;color:white;">
         <h2> You can reach us on... </h2>
         <h3>Address: Abcd, Efgh, Ijkl</h3>
